--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -113,3 +113,13 @@ jobs:
             git push origin HEAD
             echo "🚀 文件已成功推送至倉庫"
           fi
+
+          # 強制提交 ISS 文件以確保版本號更新被記錄
+          if [ -f "Setup/PVZ_Weihua.iss" ]; then
+            git add -f "Setup/PVZ_Weihua.iss"
+            if ! git diff --cached --quiet "Setup/PVZ_Weihua.iss"; then
+              git commit -m "Update v${VER} - Version Number Changed"
+              git push origin HEAD
+              echo "🚀 版本號更新已提交"
+            fi
+          fi
